# todo-daily

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: database.py  main.py  models.py
app/routers/: pages.py  projects.py  todos.py
app/services/: project_service.py  todo_service.py
app/static/css/: style.css
app/templates/: _todo_list.html  base.html  index.html
app/templates/projects/: _log_list.html  _objective_list.html  dashboard.html  detail.html  weekly.html
